<resources>
    <string name="app_name">demoFoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="welcome_text">Welcome to our restaurant</string>
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="register_text">Register</string>
    <string name="dont_have_account_text">"Don't have account? "</string>
    <string name="full_name_text">Nguyen Van A</string>
    <string name="already_registerd_text">"Already Registered? "</string>
    <string name="menu_daily_meal">Daily Meal</string>
    <string name="menu_favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="logout">Logout</string>
    <string name="search_food_text">Search your food!</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="hello_text">Hello</string>
    <string name="pizza">pizza</string>
    <string name="product_name">Product Name</string>
    <string name="rating_score">5.0</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="min_price">Min - $45</string>
    <string name="dinner">Dinner</string>
    <string name="Description">Description</string>
    <string name="Discount">Discount</string>
    <string name="name">Name</string>
    <string name="number">5.0</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here!</string>
    <string name="view_more">view more</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="description_here">Description Here</string>
    <string name="food_name">Food Name</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="_180">$180</string>
    <string name="make_order">Make order</string>
</resources>