<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.demofoodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.demofoodapp.ui.dailymeal.DailyMealFragment"
        android:label="@string/menu_daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.demofoodapp.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/favourite_fragment" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.demofoodapp.MyCartFragment"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/my_cart_fragment" />
</navigation>